# y-engine

./: .cproject  .gitignore  .kaba-repo  .project  CMakeLists.txt  install-kaba-module.kaba  meson.build  todo  vcpkg.json  xmake.conf  y.sln  y.vcxproj  y.vcxproj.filters
api/debug/: gbuffer.kaba  gui-stats.kaba  hdr.kaba  shadows.kaba  stats.kaba  wireframe.kaba  zbuffer.kaba
api/helper/: capture-video.kaba  curves.kaba
api/net/: .kaba-package  net.kaba
api/profiler/: .kaba-package  profiler.kaba
api/y/: .kaba-package  audio.kaba  ecs.kaba  engine.kaba  fx.kaba  gfx.kaba  model.kaba  net.kaba  networking.kaba  profiler.kaba  ui.kaba  world.kaba  y.kaba
api/yengine/: .kaba-package  audio.kaba  common.kaba  ecs.kaba  engine.kaba  fx.kaba  gfx.kaba  model.kaba  networking.kaba  profiler.kaba  ui.kaba  world.kaba  yengine.kaba  yrenderer.kaba
api/yengine/.docs/: yengine.audio.txt  yengine.common.txt  yengine.ecs.txt  yengine.engine.txt  yengine.fx.txt  yengine.gfx.txt  yengine.model.txt  yengine.networking.txt  yengine.profiler.txt  yengine.txt  yengine.ui.txt  yengine.world.txt
api/yengine/debug/: gbuffer.kaba  hdr.kaba  shadows.kaba  stats.kaba  wireframe.kaba  zbuffer.kaba
api/yengine/helper/: capture-video.kaba  curves.kaba
src/: Config.cpp  Config.h  EngineData.cpp  GameIni.cpp  GameIni.h  LibExport.cpp  Makefile  Makefile-gl  Makefile-minimal  Makefile-vulkan  Renderer.cpp  Renderer.h  graphics-fwd.h  graphics-impl.h  main.cpp  meta.cpp  meta.h  xmake.conf
src/audio/: AudioBuffer.cpp  AudioBuffer.h  AudioStream.cpp  AudioStream.h  Listener.cpp  Loading.cpp  Loading.h  Music.cpp  Sound.cpp  Sound.h  SoundAL.cpp  SoundSource.cpp  audio.cpp  audio.h
src/ecs/: Component.h  ComponentManager.cpp  ComponentManager.h  Entity.h  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
src/fx/: Beam.cpp  Beam.h  Light.cpp  Light.h  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleManager.cpp  ParticleManager.h
src/gui/: Font.cpp  Font.h  Node.cpp  Node.h  Picture.cpp  Picture.h  Text.cpp  Text.h  gui.cpp  gui.h
src/helper/: DeletionQueue.cpp  DeletionQueue.h  ErrorHandler.cpp  ErrorHandler.h  InputManager.cpp  InputManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ResourceManager.cpp  ResourceManager.h  Scheduler.cpp  Scheduler.h  TimeTable.cpp  TimeTable.h
src/input/: Gamepad.cpp  Gamepad.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  VR.cpp  VR.h
src/lib/: config.h
src/lib/base/: array.h  sort.h  tuple.h
src/lib/fft/: _kaba_export.cpp  _kaba_export.h
src/lib/hui/: Config.cpp
src/lib/hui_minimal/: Application.cpp  Application.h  Callback.cpp  Callback.h  Config.cpp  Event.h  Timer.cpp  Timer.h  error.cpp  error.h  hui.cpp  hui.h
src/lib/kaba/: Context.cpp  Context.h
src/lib/kabaexport/: KabaExporter.h
src/lib/kapi/: kapi.h
src/lib/layout/: Node.cpp
src/lib/nix/: nix.cpp  nix.h  nix_config.h  nix_draw.cpp  nix_shader.cpp  nix_shader.h  nix_textures.cpp  nix_textures.h  nix_vertexbuffer.cpp  nix_vertexbuffer.h  nix_view.cpp  nix_view.h
src/lib/profiler/: Profiler.cpp  Profiler.h  _kaba_export.cpp
src/lib/threads/: ThreadPool.cpp  ThreadPool.h
src/lib/vulkan/: AccelerationStructure.cpp  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Queue.h  (+24 more)
src/net/: NetworkManager.cpp  NetworkManager.h
src/plugins/: Controller.cpp  Controller.h  ControllerManager.cpp  ControllerManager.h  PluginManager.cpp  PluginManager.h  Scheduler.cpp  Scheduler.h  export.cpp
src/renderer/: DeferredRenderer.cpp  DeferredRenderer.h  FullCameraRenderer.cpp  FullCameraRenderer.h  GBufferRenderer.cpp  GBufferRenderer.h  RenderPath.cpp  RenderPath.h  RenderPathDeferred.cpp  RenderPathDeferred.h  RenderPathForward.cpp  RenderPathForward.h  RenderPathGL.cpp  RenderPathGL.h  RenderPathGLDeferred.cpp  RenderPathGLDeferred.h  RenderPathGLForward.cpp  RenderPathGLForward.h  RenderPathVulkan.cpp  RenderPathVulkan.h  RenderPathVulkanForward.cpp  RenderPathVulkanForward.h  Renderer.cpp  Renderer.h  RendererGL.cpp  RendererGL.h  RendererVulkan.cpp  RendererVulkan.h  ShadowMapRenderer.cpp  ShadowMapRenderer.h  TextureRenderer.cpp  TextureRenderer.h  WindowRenderer.cpp  WindowRenderer.h  WindowRendererGL.cpp  WindowRendererGL.h  WindowRendererVulkan.cpp  WindowRendererVulkan.h  base-gl.cpp  base-vulkan.cpp  (+2 more)
src/world/: Camera.cpp  Camera.h  Entity3D.cpp  Entity3D.h  LevelData.cpp  LevelData.h  Light.cpp  Light.h  Link.cpp  Link.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Object.cpp  Object.h  PhysicsSimulation.cpp  PhysicsSimulation.h  Terrain.cpp  Terrain.h  World.cpp  World.h  camera.cpp  camera.h  material.cpp  material.h  model.cpp  model.h  object.cpp  object.h  terrain.cpp  terrain.h  world.cpp  world.h
src/y/: BaseClass.cpp  BaseClass.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  EngineData.cpp  EngineData.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
static/: convolution.shader
static/deferred/: 3d.shader  module-surface.shader  out.shader
static/forward/: 2d.shader  3d-fx.shader  3d-shadow.shader  3d-skybox.shader  3d.shader  blur.shader  hdr.shader  module-surface-pbr.shader  module-surface-pbr1.shader  module-surface.shader  trivial.shader
static/shader/: default-animated.shader  default-multi.shader  default.shader  fx.shader  module-basic-data.shader  module-basic-interface.shader  module-basic-vertex-data.shader  module-geometry-lines.shader  module-geometry-points.shader  module-light-sources-default.shader  module-lighting-pbr.shader  module-lighting-simple.shader  module-lighting-surfel.shader  module-shadows-hard.shader  module-shadows-pcf-hardening.shader  module-tessellation-control-terrain.shader  module-vertex-animated.shader  module-vertex-default.shader  module-vertex-fx.shader  module-vertex-instanced.shader  module-vertex-lines.shader  module-vertex-points.shader  shadow.shader
tools/: create-project.kaba  upgrade-api.kaba
(+269 files in other folders)
